2011-12-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp: Fill the history list with a non-nil
	value.

2011-12-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp (make-x-drawable): Drawable wrapper to prevent
	type error in some CLX versions.
	Replace xlib:drawable-* functions with x-drawable-* equivalents

2011-12-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (um-create-xdg-section-list): Add at least
	the 'Utility menu entry.

	* src/config.lisp (*xdg-section-list*): moved to config.lisp.

	* src/clfswm-util.lisp (update-menus): Set a default value for
	searching .desktop files when XDG_DATA_DIRS is not set.

2011-10-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (place-window-from-hints): Use
	with-placement macro to place unmanaged windows in an arbitrary
	place.

2011-06-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (clean-windows-in-all-frames): Prevent
	current root and current child being equal to child.

2011-06-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/keysyms.lisp: Repeat Page_Down/Up keysym definitions at the
	end of the file to change keysyms priority.

2011-06-13  Sylvain HENRY <hsyl20@gmail.com>

	*  *.*: Minor spelling fix.

2011-06-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (:unmap-notify, :destroy-notify): Show all
	children just after the xlib tree cleanup -> reduce the
	flickering when a window is deleted or destroyed.

	* src/clfswm-internal.lisp (process-existing-windows): Do not
	process the notify window.

2011-06-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* *: **** Release 1106 ****

2011-06-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (clean-windows-in-all-frames): New
	function to prevent xlib error when a window is deleted.

2011-06-08  Philippe Brochard  <pbrochard@common-lisp.net>
